@@ -60,7 +60,7 @@ public class CachingCVB0Mapper
   private ModelTrainer modelTrainer;
   private int maxIters;
   private int numTopics;
-  
+
   protected ModelTrainer getModelTrainer() {
     return modelTrainer;
   }
@@ -112,7 +112,7 @@ public class CachingCVB0Mapper
   public void map(IntWritable docId, VectorWritable document, Context context)
     throws IOException, InterruptedException {
     /* where to get docTopics? */
-    Vector topicVector = new DenseVector(new double[numTopics]).assign(1.0 / numTopics);
+    Vector topicVector = new DenseVector(numTopics).assign(1.0 / numTopics);
     modelTrainer.train(document.get(), topicVector, true, maxIters);
   }
 
